<resources>
    <string name="app_name">3-Minute Loan</string>
    <string name="details_title">Loan Details</string>
    <string name="list_title">History</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Registration And Login Fragments -->
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="label_register_new_profile">Register New Profile</string>
    <string name="register_button">Register</string>
    <string name="redirect_to_login_text">I already have account</string>
    <string name="label_sign_in">Sign in</string>
    <string name="redirect_to_create_text">Create new profile</string>
    <string name="login_button">Login</string>
    <string name="registration_error">Some error occurred</string>


    <!--Items In Recycle View-->
    <string name="item_approved">APPROVED</string>
    <string name="item_registered">REGISTERED</string>
    <string name="item_rejected">REJECTED</string>
    <string name="item_amount">%1$d.00₽</string>
    <string name="item_percent">Interest rate: %1$.2f%%</string>
    <string name="item_date">Repayment: %1$s</string>
    <string name="item_amount_label">Amount due</string>


    <!--Create Loan Fragment-->
    <string name="hint_amount">Amount</string>
    <string name="helper_amount">Less or equal to mentioned above</string>
    <string name="conditions_label_text">Conditions:</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_phone">Phone Number</string>
    <string name="create_button_text">Borrow</string>
    <string name="conditions_period">%1$d days</string>
    <string name="conditions_percent">%1$.2f%%</string>

    <!--Details Fragment-->
    <string name="details_personal_label">Personal Details:</string>
    <string name="details_back_button">Back</string>
    <string name="loan_details_label">Loan Details:</string>
    <string name="details_name">Name: %1$s</string>
    <string name="details_surname">Surname: %1$s</string>
    <string name="details_phone">Phone Number: %1$s</string>
    <string name="details_amount">%1$d₽</string>
    <string name="details_percent">%1$.2f %%</string>
    <string name="details_date">%1$s</string>
    <string name="details_period">%1$d days</string>
    <string name="details_state">State: %1$s</string>
    <string name="details_period_label">Period</string>
    <string name="details_percent_label">Interest rate</string>
    <string name="details_date_repay_label">Repayment Date</string>
    <string name="details_amount_repay_label">Repayment</string>
    <string name="details_date_label">Date of the loan</string>
    <string name="details_amount_label">Amount</string>

    <string name="conditions_period_label">Period</string>
    <string name="menu_refresh">Refresh</string>
    <string name="conditions_amount">"Maximum amount: %1$d "</string>
    <string name="conditions_percent_label">Loan rate</string>
    <string name="history_title">History</string>
    <string name="create_title">Apply for a loan</string>
    <string name="list_empty_placeholder">Your Loan History Is Empty.\nPress button below to create.</string>
</resources>
